fix(build): fix trigger paths to new location
Signed-off-by: Stephan Wendel <me@stephanwe.de>

--- a/.github/workflows/BuildImages.yml
+++ b/.github/workflows/BuildImages.yml
@@ -10,7 +10,7 @@ on:
       - "config/**"
       - ".github/workflows/BuildImages.yml"
       - ".github/workflow_config.yml"
-      - "scripts/setup_matrix.py"
+      - ".github/scripts/setup_matrix.py"
     tags-ignore:
       - "**"
   pull_request:
@@ -19,7 +19,7 @@ on:
       - "src/**"
       - "config/**"
       - ".github/workflows/BuildImages.yml"
-      - "scripts/setup_matrix.py"
+      - ".github/scripts/setup_matrix.py"
       - ".github/workflow_config.yml"
 
   workflow_dispatch:
