chore(build): add new matrix workflow (#253)
* chore(build): add new matrix workflow

This adds a new behavior of buildcheck and release workflow.
The previous generated array for the matrix step,
will now be generated from `setup_matrix.py`, this script
reads `.github/workflow_config.yml` and generates the array
according to it's setup.

This allows an easy to maintain entrypoint to choose which
SBC will be build on test builds and releases.

It also includes version bump from `action/checkout@v3` to
`action/checkout@v4`

Signed-off-by: Stephan Wendel <me@stephanwe.de>

---------

Signed-off-by: Stephan Wendel <me@stephanwe.de>

--- a/.github/workflows/BuildImages.yml
+++ b/.github/workflows/BuildImages.yml
@@ -9,6 +9,8 @@ on:
       - "src/build_dist"
       - "config/**"
       - ".github/workflows/BuildImages.yml"
+      - ".github/workflow_config.yml"
+      - ".github/scripts/setup_matrix.py"
     tags-ignore:
       - "**"
   pull_request:
@@ -17,6 +19,8 @@ on:
       - "src/**"
       - "config/**"
       - ".github/workflows/BuildImages.yml"
+      - ".github/scripts/setup_matrix.py"
+      - ".github/workflow_config.yml"
 
   workflow_dispatch:
 
@@ -32,13 +36,15 @@ jobs:
       matrix: ${{ steps.set-matrix.outputs.matrix }}
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Create Matrix
         id: set-matrix
         run: |
-          ARRAY=$(find ${{ github.workspace }}/config -type f -printf '%P\n' | sed '/default/d' | sort | jq -R -s -c 'split("\n")[:-1]')
-          echo "matrix=${ARRAY}" >> $GITHUB_OUTPUT
+          PY_INT=$(command -v python3)
+          CONFIG="${{ github.workspace }}/.github/workflow_config.yml"
+          GROUP="buildtest"
+          $PY_INT ${{ github.workspace }}/.github/scripts/setup_matrix.py -c $CONFIG -g $GROUP --git
 
   build:
     needs: setup
