--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -128,12 +128,17 @@ jobs:
       matrix:
         config: ${{ fromJson(needs.matrix.outputs.matrix) }}
     steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v4
+        with:
+          path: repository
+          submodules: true
+
       - name: Build image
         id: build
-        uses: mainsail-crew/MainsailOS-actions/build-image@master
+        uses: ./repository/.github/actions/build
         with:
           config: ${{ matrix.config }}
-          build-ref: master
 
       - name: Upload failed Logfile
         if: failure()
