chore: refactor build & release workflow to remove external actions (#264)
* chore: refactor build workflow

Signed-off-by: Stefan Dej <meteyou@gmail.com>

* fix: file location

Signed-off-by: Stefan Dej <meteyou@gmail.com>

* fix: extract checkout repository

Signed-off-by: Stefan Dej <meteyou@gmail.com>

* chore: update actions/checkout to v4

Signed-off-by: Stefan Dej <meteyou@gmail.com>

* chore: add cleanup & fix permission step in actions/build

Signed-off-by: Stefan Dej <meteyou@gmail.com>

* chore: remove fix permission in buildimages & release workflow

Signed-off-by: Stefan Dej <meteyou@gmail.com>

* chore: remove deprecated input

Signed-off-by: Stefan Dej <meteyou@gmail.com>

* chore: switch to new relative workflow

Signed-off-by: Stefan Dej <meteyou@gmail.com>

---------

Signed-off-by: Stefan Dej <meteyou@gmail.com>

--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -128,12 +128,17 @@ jobs:
       matrix:
         config: ${{ fromJson(needs.matrix.outputs.matrix) }}
     steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v4
+        with:
+          path: repository
+          submodules: true
+
       - name: Build image
         id: build
-        uses: mainsail-crew/MainsailOS-actions/build-image@master
+        uses: ./repository/.github/actions/build
         with:
           config: ${{ matrix.config }}
-          build-ref: master
 
       - name: Upload failed Logfile
         if: failure()
@@ -146,10 +151,6 @@ jobs:
         id: move-image
         shell: bash
         run: |
-          WORKSPACE=$(echo ${{ github.workspace }})
-          sudo chown -R $USER:$USER $WORKSPACE/repository/src/workspace || true
-          sudo chmod 0775 -R $WORKSPACE/repository/src/workspace || true
-
           source repository/src/config
           base_name="${{ needs.release.outputs.date }}-${DIST_NAME}-${DIST_VERSION}"
           image="${base_name}-${{ steps.build.outputs.type }}-${{ steps.build.outputs.sbc }}"
