--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -244,6 +244,7 @@ jobs:
 
           supported_sbc="$(echo "${JSON_SUPPORTED_SBC}" | tr ' ' '\n')"
           supported_sbc="$(echo "${supported_sbc}" | jq -R . | jq -s .)"
+          supported_sbc="$(echo "${supported_sbc}" | jq -c .)"
           echo "supported_sbc=${supported_sbc}" >> $GITHUB_OUTPUT
           echo "Debug: Output: ${supported_sbc}"
 
