--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -225,16 +225,15 @@ jobs:
         run: |
           source repository/src/config
 
-          pretty_name=${JSON_PRETTY_NAME}
           if [[ -n "${BASE_ARCH}" ]]; then
-            type="64bit"
+            type="64-bit"
           else
-            type="32bit"
+            type="32-bit"
           fi
 
-          name="${pretty_name}"
-          name="${name} ${{ github.event.inputs.version }}"
-          name="${name} ${type}"
+          name="${JSON_PRETTY_NAME} ${{ github.event.inputs.version }}"
+          name="${name} - ${JSON_PRETTY_SBC_NAME}"
+          name="${name} (${type})"
 
           echo "pretty_name=${name}" >> $GITHUB_OUTPUT
           echo "description=${JSON_DESCRIPTION}" >> $GITHUB_OUTPUT
@@ -249,7 +248,7 @@ jobs:
           name: "${{ steps.json-data.outputs.pretty_name }}"
           description: "${{ steps.json-data.outputs.description }}"
           icon: "${{ steps.json-data.outputs.icon_url }}"
-          url: "https://github.com/mainsail-crew/MainsailOS/releases/download/${{ github.event.inputs.version }}/${{ steps.move-image.outputs.image }}.img.xz"
+          url: "https://github.com/${{ github.repository }}/releases/download/${{ github.event.inputs.version }}/${{ steps.move-image.outputs.image }}.img.xz"
           extract_size: ${{ steps.filesizes.outputs.image }}
           extract_sha256: "${{ steps.checksums.outputs.image }}"
           image_download_size: ${{ steps.filesizes.outputs.zip }}
@@ -260,7 +259,7 @@ jobs:
           result-encoding: string
           script: |
             const fs = require('fs')
-            let { name, description, icon, url, extract_size, extract_sha256, image_download_size, release_date, init_format, devices } = process.env
+            const { name, description, icon, url, extract_size, extract_sha256, image_download_size, release_date, init_format, devices } = process.env
 
             const json = JSON.stringify({
               name,
